--- a/netcore/netcore.csproj
+++ b/netcore/netcore.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Views\Adminlte\" />
     <Folder Include="wwwroot\uploads\" />
   </ItemGroup>
 
