separating roles into its own services

--- a/netcore/appsettings.json
+++ b/netcore/appsettings.json
@@ -8,6 +8,10 @@
       "Default": "Warning"
     }
   },
+  "SuperAdminDefaultOptions": {
+    "Email": "super@admin.com",
+    "Password": "123456"
+  },
   "SendGridOptions": {
     "SendGridUser": "---fill with your send grid user id--",
     "SendGridKey": "---fill with your send grid key------",
