--- a/netcore/appsettings.json
+++ b/netcore/appsettings.json
@@ -26,5 +26,24 @@
     "smtpSSL": true,
     "fromEmail": "---your from email-------------------",
     "fromFullName": "---your from full name------------"
+  },
+  "IdentityDefaultOptions": {
+    "PasswordRequireDigit": false,
+    "PasswordRequiredLength": 6,
+    "PasswordRequireNonAlphanumeric": false,
+    "PasswordRequireUppercase": false,
+    "PasswordRequireLowercase": false,
+    "PasswordRequiredUniqueChars": 1,
+    "LockoutDefaultLockoutTimeSpanInMinutes": 30,
+    "LockoutMaxFailedAccessAttempts": 5,
+    "LockoutAllowedForNewUsers": true,
+    "UserRequireUniqueEmail": true,
+    "SignInRequireConfirmedEmail": true,
+    "CookieHttpOnly": true,
+    "CookieExpiration": 150,
+    "LoginPath": "/Account/Login",
+    "LogoutPath": "/Account/Logout",
+    "AccessDeniedPath": "/Account/AccessDenied",
+    "SlidingExpiration": true
   }
 }
