--- a/netcore/netcore.csproj
+++ b/netcore/netcore.csproj
@@ -20,6 +20,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Controllers\Demo\" />
+    <Folder Include="Models\Demo\" />
     <Folder Include="wwwroot\uploads\" />
   </ItemGroup>
 
