changes connection strings

--- a/netcore/appsettings.json
+++ b/netcore/appsettings.json
@@ -1,5 +1,7 @@
 ﻿{
-
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=inventory-management-codecanyon;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
